Added logic for hosting on GitHub.

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         <!-- Load the TypeScript compiler in the browser from a CDN (runtime only) -->
         <script src="https://cdn.jsdelivr.net/npm/typescript@latest/lib/typescript.js"></script>
 
-        <!-- App entry (Vite will load /src/main.ts as a module during dev) -->
+        <!-- App entry (Vite will load /src/scripts/main.ts as a module during dev) -->
         <script type="module" src="./scripts/main.ts"></script>
     </body>
 </html>
