Implement syntax highlighting with Code Mirror 6.

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                         <button id="insert-sample">Insert sample</button>
                     </div>
                 </div>
-                <textarea id="ts-input" aria-label="TypeScript input" spellcheck="false"></textarea>
+                <div id="ts-input" aria-label="TypeScript input"></div>
             </section>
 
             <section class="panel">
@@ -45,7 +45,7 @@
                         <button id="copy-js">Copy</button>
                     </div>
                 </div>
-                <pre id="js-output" aria-label="JavaScript output" readonly></pre>
+                <div id="js-output" aria-label="JavaScript output"></div>
             </section>
         </main>
 
